--- a/03-basic.ipynb
+++ b/03-basic.ipynb
@@ -99,6 +99,27 @@
    "source": [
     "type({1,2,3})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "睡觉\n"
+     ]
+    }
+   ],
+   "source": [
+    "天气='晴天'\n",
+    "if 天气=='阴天':\n",
+    "    print('去玩')\n",
+    "else:\n",
+    "    print('睡觉')"
+   ]
   }
  ],
  "metadata": {
