--- a/03-basic.ipynb
+++ b/03-basic.ipynb
@@ -124,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -140,7 +140,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e0144baad0ecee903f108a3e46e51ceadd7da3fc904cfa79747d813b61464b4e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
