--- a/05-dataframe.ipynb
+++ b/05-dataframe.ipynb
@@ -22,16 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = pd.Series(data=[100, 'a', { 'dic1': 5 }],)"
+    "s = pd.Series(data=[100, 'a', { 'dic1': 5 }],)\n",
+    "# 参数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +40,120 @@
     "    \"作者\": pd.Series(['莫言','余华','残雪']),\n",
     "    \"作品\": pd.Series(['红高粱','活着','暗夜']),\n",
     "    \"价格\": pd.Series([25,523,39]),\n",
-    "}\n",
-    "df2 = pd.DataFrame(d1)"
+    "}  # 字典 # 赋值表达式\n",
+    "df2 = pd.DataFrame(d1)\n",
+    "\n",
+    "# 所有函数，表达式都有返回值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s2 = pd.Series(\"1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0], dtype=int64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2.index.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    红高粱\n",
+       "1     活着\n",
+       "2     暗夜\n",
+       "Name: 作品, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['作品']\n",
+    "# 索引器"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "茅台 = pd.read_csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 列索引\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 行索引\n",
+    "茅台.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "贵州茅台 = 茅台.set_index('day')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loc索引器 单个元素\n",
+    "贵州茅台.loc['2001-08-27']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "贵州茅台.loc['2001-08-27'['open','close']]\n",
+    "# 元素列表"
    ]
   }
  ],
