--- a/14-单变量推论统计.ipynb
+++ b/14-单变量推论统计.ipynb
@@ -95,10 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "均值： 7.20\n",
+      "均值在置信水平0.95下的置信区间为： (7.171337577138237, 7.2214184794700635)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(F\"均值：{mean: .2f}\")\n",
+    "print(F\"均值在置信水平{confidence_level}下的置信区间为：\", confidence_interval)"
+   ]
   }
  ],
  "metadata": {
